--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
+    "axios": "^0.18.1",
     "bootstrap": "^5.1.3",
     "joi-browser": "13.4",
     "lodash": "^4.17.10",
@@ -16,6 +17,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
