--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.18.1",
     "bootstrap": "^5.1.3",
     "joi-browser": "13.4",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
+    "raven-js": "^3.26.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
