--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.16.13",
     "axios": "^0.18.1",
     "bootstrap": "^5.1.3",
+    "create-react-app": "^5.0.0",
     "joi-browser": "13.4",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
